[workspace]
resolver = "2"

members = [
  "./packages/lambda",
]

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace.dependencies]
lambda_http = "*"
lambda_runtime = "*"
serde = "*"
tokio = "*"
url = "*"
serde_json = "*"
anyhow = "*"
ureq = { version = "*", features = ["socks-proxy", "charset", "json"] }
headers = "*"
chrono = "*"
